Java 17 cleanup (#174)
* Java 17 cleanup

* Improve more Stream API usage.

* Fix build

* More cleanup

* More cleanup (more consistency in method usage)

* Optimize imports

* Fix unnedded config refactor