@@ -2,7 +2,6 @@ package com.thevoxelbox.voxelsniper.brush.type.performer;
 
 import com.sk89q.worldedit.math.BlockVector3;
 import com.thevoxelbox.voxelsniper.sniper.snipe.Snipe;
-import com.thevoxelbox.voxelsniper.sniper.snipe.message.SnipeMessageSender;
 import com.thevoxelbox.voxelsniper.sniper.snipe.message.SnipeMessenger;
 import com.thevoxelbox.voxelsniper.util.Vectors;
 import org.bukkit.ChatColor;
@@ -22,7 +21,7 @@ public class ThreePointCircleBrush extends AbstractPerformerBrush {
 
     private static final List<String> TOLERANCES = Arrays.stream(Tolerance.values())
             .map(Tolerance::getName)
-            .collect(Collectors.toList());
+            .toList();
 
     @Nullable
     private Vector coordinatesOne;
@@ -203,19 +202,10 @@ public class ThreePointCircleBrush extends AbstractPerformerBrush {
 
     @Override
     public void sendInfo(Snipe snipe) {
-        SnipeMessageSender messageSender = snipe.createMessageSender()
-                .brushNameMessage();
-        switch (this.tolerance) {
-            case DEFAULT:
-            case ACCURATE:
-            case SMOOTH:
-                messageSender.message(ChatColor.GOLD + "Mode: " + this.tolerance.getName());
-                break;
-            default:
-                messageSender.message(ChatColor.GOLD + "Mode: Unknown");
-                break;
-        }
-        messageSender.send();
+        snipe.createMessageSender()
+                .brushNameMessage()
+                .message(ChatColor.GOLD + "Mode: " + this.tolerance.getName())
+                .send();
     }
 
     private enum Tolerance {
