@@ -14,7 +14,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -291,7 +290,7 @@ public class VoxelSniperConfigLoader {
                 .map(key -> key.toLowerCase(Locale.ROOT))
                 .map(BlockTypes::get)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -301,7 +300,8 @@ public class VoxelSniperConfigLoader {
      */
     protected void setLitesniperRestrictedMaterials(List<BlockType> restrictedMaterials) {
         this.config.set(LITESNIPER_RESTRICTED_MATERIALS, restrictedMaterials.stream()
-                .map(BlockType::getId).collect(Collectors.toList()));
+                .map(BlockType::getId)
+                .toList());
     }
 
     /**
